--- a/app/views/videos/index.html.erb
+++ b/app/views/videos/index.html.erb
@@ -7,7 +7,7 @@
   <body>
     <!-- ヘッダー部分 -->
     <header>
-      <h1>珠乃井ナナのリズムパレード</h1>
+      <h1>ナナのリズムパレード</h1>
     </header>
     <div class="container">
 
